fix(css): missing border color

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -46,6 +46,7 @@ body {
   --code-color-l: 45%;
 
   // Custom variables
+  --border-color: var(--text-color-10);
   --fontstack-heading: var(--fontstack-prefix) var(--fontstack-sans-serif);
   --heading-letter-spacing: -.04em;
 }
